# reggie

./: CMakeLists.txt  dependencies.rosinstall  package.xml
joy_to_reggie/: CMakeLists.txt  package.xml
joy_to_reggie/scripts/: joy_to_reggie_node.py
msg/: WheelVelocity.msg
reggie_driver/: CMakeLists.txt  package.xml
reggie_driver/scripts/: simple_wheel_command_listener.py  wheel_controller.py
reggie_episode/: CMakeLists.txt  package.xml
reggie_episode/include/reggie_episode/: reggie_episode.h
reggie_episode/launch/: reggie_episode.launch
reggie_episode/src/: reggie_episode.cpp
reggie_kinect/: CMakeLists.txt  package.xml
reggie_kinect/launch/: reggie_kinect.launch
reggie_localize/: CMakeLists.txt  package.xml
reggie_localize/config/: marker_color_ranges.yaml  reggie_localize.yaml
reggie_localize/include/reggie_localize/: k_means.h  reggie_localize.h
reggie_localize/launch/: crop_cloud.launch  reggie_localize.launch
reggie_localize/src/: crop_cloud.cpp  k_means.cpp  reggie_localize.cpp
reggie_locator/: CMakeLists.txt  package.xml
reggie_locator/include/reggie_locator/: reggie_locator.h
reggie_locator/launch/: crop_cloud.launch  reggie_locator.launch
reggie_locator/src/: crop_cloud.cpp  k_means.cpp  reggie_locator.cpp  reggie_locator_node.cpp
reggie_random_walk/: CMakeLists.txt  package.xml
reggie_random_walk/config/: reggie_random_walk.yaml
reggie_random_walk/include/reggie_random_walk/: reggie_random_walk.h
reggie_random_walk/launch/: reggie_random_walk.launch
reggie_random_walk/src/: reggie_random_walk.cpp
reggie_realsense/: CMakeLists.txt  package.xml
reggie_realsense/launch/: reggie_realsense.launch
reggie_support/: CMakeLists.txt  package.xml
reggie_support/bags/: edit_bag.py
reggie_support/config/: marker_color_ranges.yaml  reggie_kinect.rviz  reggie_support.yaml
reggie_support/launch/: reggie.launch
reggie_support/rviz/: crop_cloud.rviz  reggie.rviz  reggie_kinect.rviz
reggie_support/srv/: EpisodeElement.srv
reggie_support/urdf/: reggie.urdf
scripts/: joy_to_reggie.py  listener.py  simple_wheel_command_listener.py  simple_wheel_controller.py  talker.py  wheel_controller.py
src/: wheel_controler.py
srv/: WheelCommand.srv
