<?xml version="1.0"?>
<package>
  <name>reggie_episode</name>
  <version>0.0.1</version>
  <description>A package containing a service node that collects episode information and stores them in a yaml file.</description>
  <maintainer email="sdale4@asu.edu">Stevie Dale</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>reggie_support</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>reggie_support</run_depend>
  <run_depend>std_srvs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
