<package format="2">
  <name>reggie_kinect</name>
  <version>0.0.1</version>
  <description>
  Kinect setup for Reggie robot
  </description>
  <maintainer email="sdale4@asu.edu">Stevie Dale</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>freenect_launch</exec_depend>
</package>
